optimized according to lint

--- a/src/styles/event-card.scss
+++ b/src/styles/event-card.scss
@@ -10,14 +10,13 @@
     flex-direction: column;
 
     &-title {
-    padding-bottom: 30px;
-
+      padding-bottom: 30px;
     }
 
     &-type {
       display: inline-block;
       margin-right: 13px;
-      font-family: 'IBM Plex Sans', sans-serif;
+      font-family: "IBM Plex Sans", sans-serif;
       font-weight: 500;
       font-size: 14px;
       line-height: 100%;
@@ -27,20 +26,19 @@
     &-date {
       display: inline-block;
       margin-left: 13px;
-      font-family: 'IBM Plex Sans', sans-serif;
+      font-family: "IBM Plex Sans", sans-serif;
       font-weight: 700;
       font-size: 14px;
       line-height: 150%;
-      color: #1A5A4C;
+      color: #1a5a4c;
     }
 
     &-name {
       position: relative;
       padding-bottom: 15px;
-      font-family: 'Montserrat', sans-serif;
+      font-family: "Montserrat", sans-serif;
       font-size: 36px;
       font-weight: normal;
-
 
       &::after {
         content: "";
@@ -49,12 +47,12 @@
         transform: translate(100%, -50%);
         height: 15px;
         width: 15px;
-        background-color: #F14A27;
+        background-color: #f14a27;
       }
     }
 
     &-details {
-      font-family: 'IBM Plex Sans', sans-serif;
+      font-family: "IBM Plex Sans", sans-serif;
       font-weight: 300;
       font-size: 16px;
       line-height: 150%;
