--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -4,11 +4,10 @@
   grid-template-rows: 50px 1fr max-content 1fr 70px;
   gap: 0 30px;
   line-height: 150%;
-  font-family: 'IBM Plex Sans', sans-serif;
+  font-family: "IBM Plex Sans", sans-serif;
   font-size: 14px;
   font-weight: 400;
-  color: #0F0E08;
-
+  color: #0f0e08;
 
   &__logo {
     grid-column-start: 1;
@@ -62,7 +61,7 @@
     gap: 20px 0;
     
     &-link {
-      color: #0F0E08;
+      color: #0f0e08;
     }
   }
 
@@ -75,7 +74,7 @@
     gap: 20px 0;
 
     &-link {
-      color: #0F0E08;
+      color: #0f0e08;
     }
   }
 }
