--- a/src/styles/logo.scss
+++ b/src/styles/logo.scss
@@ -1,5 +1,5 @@
 .logo {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 36px;
   line-height: 100%;
   font-weight: bold;
