--- a/src/styles/subscription.scss
+++ b/src/styles/subscription.scss
@@ -4,8 +4,7 @@
   align-items: center;
   justify-content: center;
   height: 550px;
-  background: 
-    linear-gradient(0deg, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
     url(../images/subs.png)
     center / cover
     no-repeat;
@@ -18,7 +17,7 @@
   &__details {
     margin-bottom: 60px;
     color: #fff;
-    font-family: 'IBM Plex Sans', sans-serif;
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 18px;
     line-height: 100%;
   }
@@ -35,7 +34,7 @@
     height: 70px;
     margin-right: 30px;
     background-color: #fff;
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
     color: #687480;
   }
 
@@ -43,7 +42,7 @@
     height: 70px;
     width: 70px;
     background: url(../images/black_arrow.svg) no-repeat center;
-    background-color: #F14A27;
+    background-color: #f14a27;
     cursor: pointer;
   }
 }
