--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -34,7 +34,7 @@
     font-size: 14px;
     line-height: 100%;
     text-align: right;
-    font-family: 'IBM Plex Sans', sans-serif;
+    font-family: "IBM Plex Sans", sans-serif;
     text-transform: uppercase;
     writing-mode: vertical-lr;
     transform: scale(-1, -1);
@@ -63,24 +63,24 @@
     align-self: center;
     height: 70px;
     width: 150px;
-    border: 1px solid #1A5A4C;
+    border: 1px solid #1a5a4c;
     line-height: 70px;
-    font-family: 'IBM Plex Sans', sans-serif;
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 16px;
     font-weight: 500;
     text-align: center;
-    color: #0F0E08;
+    color: #0f0e08;
     position: relative;
 
     &::after {
-      content:"";
+      content: "";
       position: absolute;
       top: -1px;
       right: -70px;
       height: 70px;
       width: 70px;
       background: url(../images/arrow.svg) center no-repeat;
-      background-color: #1A5A4C;
+      background-color: #1a5a4c;
     }
   }
 
@@ -94,6 +94,4 @@
       height: 100%;
     }
   }
-
-
 }
