--- a/src/styles/main-event.scss
+++ b/src/styles/main-event.scss
@@ -19,7 +19,7 @@
     height: 204px;
     padding: 45px 100px 50px;
     background-color: #fff;
-    box-shadow: 0px 2px 0px rgba(26, 90, 76, 0.25);
+    box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
 
     &-title {
       display: flex;
@@ -28,7 +28,7 @@
     }
 
     &-type {
-      font-family: 'IBM Plex Sans', sans-serif;
+      font-family: "IBM Plex Sans", sans-serif;
       font-weight: 500;
       font-size: 14px;
       line-height: 100%;
@@ -36,15 +36,15 @@
     }
 
     &-date {
-      font-family: 'IBM Plex Sans', sans-serif;
+      font-family: "IBM Plex Sans", sans-serif;
       font-weight: 700;
       font-size: 14px;
       line-height: 150%;
-      color: #1A5A4C;
+      color: #1a5a4c;
     }
 
     &-name {
-      font-family: 'Montserrat', sans-serif;
+      font-family: "Montserrat", sans-serif;
       font-size: 36px;
       font-weight: normal;
     }
