--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,17 +1,18 @@
 %h1 {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 700;
   font-size: 72px;
 }
+
 .header__name-transparent {
   -webkit-text-stroke: 1px black;
   -webkit-text-fill-color: transparent;
 }
 
 %h2 {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 48px;
   font-weight: 700;
   line-height: 100%;
-  color: #0F0E08;
+  color: #0f0e08;
 }
