add events block

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,23 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "reset";
+@import "title";
+@import "exhibition";
 
 body {
-  background: $c-gray;
+  font-family: "IBM Plex Sans", sans-serif;
+}
+
+.container {
+  padding: 0 20px;
+
+  @media (min-width: 768) {
+    padding: 0 34px;
+  }
+
+  @media (min-width: 1280px) {
+    min-width: 1170px;
+    margin: 0 auto;
+  }
 }
