--- a/src/styles/blocks/_container.scss
+++ b/src/styles/blocks/_container.scss
@@ -1,9 +1,21 @@
 .container {
-  max-width: 1238px;
+  max-width: 1570px;
   margin: 0 auto;
   padding: 0 20px;
 
   @include media(tablet) {
     padding: 0 34px;
+  }
+
+  @include media(dt) {
+    padding: 0 55px;
+  }
+
+  @include media(1440px) {
+    padding: 0 136px;
+  }
+
+  @include media(1670px) {
+    padding: 0;
   }
 }
