--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -18,6 +18,7 @@
   font-weight: bold;
   font-size: 36px;
   line-height: 100%;
+  color: $c-dark-text;
 
   @include media(tablet) {
     font-size: 48px;
@@ -26,9 +27,10 @@
 
 %h3 {
   font-family: "Montserrat", sans-serif;
-  font-weight: normal;
+  font-weight: 400;
   font-size: 28px;
   line-height: 100%;
+  color: $c-dark-text;
 
   @include media(tablet) {
     font-size: 36px;
@@ -71,6 +73,17 @@
   color: $c-secondary-text;
 
   @include media(dt) {
+    font-size: 14px;
+  }
+}
+
+%post-description {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 100%;
+
+  @include media(tablet) {
     font-size: 14px;
   }
 }
