--- a/src/styles/_blocks.scss
+++ b/src/styles/_blocks.scss
@@ -5,4 +5,6 @@
 @import "blocks/header";
 @import "blocks/nav";
 @import "blocks/hero";
+@import "blocks/actual";
+@import "blocks/post";
 //@import "blocks/main";
