--- a/src/styles/_blocks.scss
+++ b/src/styles/_blocks.scss
@@ -2,9 +2,11 @@
 @import "blocks/container";
 @import "blocks/logo";
 @import "blocks/btn";
+@import "blocks/desc";
 @import "blocks/header";
 @import "blocks/nav";
 @import "blocks/hero";
 @import "blocks/actual";
 @import "blocks/post";
+@import "blocks/promo";
 //@import "blocks/main";
