--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -15,4 +15,12 @@
     max-width: 1920px;
     margin: 0 auto;
   }
+
+  &__actual {
+    position: relative;
+  }
+
+  &__promo {
+    position: relative;
+  }
 }
