museum was create with adaptive

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,10 +1,19 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils";
+@import "./fonts";
+@import "./typography";
+@import "./variables.scss";
 @import "./reset.scss";
 @import "./header.scss";
-@import "./container.scss";
-@import "./current-events.scss";
+@import "./content.scss";
+@import "./event.scss";
+@import "./footer.scss";
+@import "./info.scss";
+@import "./logo.scss";
+@import "./nav-top.scss";
+@import "./nav.scss";
+@import "./promo.scss";
+@import "./slider-btn.scss";
+@import "./square.scss";
 
 body {
   background-color: #fff;
