--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,10 @@
 @import "./slider-btn.scss";
 @import "./square.scss";
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: #fff;
   font-family: Montserrat, sans-serif;
