--- a/src/styles/blocks/_actual.scss
+++ b/src/styles/blocks/_actual.scss
@@ -14,6 +14,9 @@
     padding: 0 20px;
     margin-bottom: 40px;
   }
+  &__post {
+    margin-bottom: 60px;
+  }
 
   @include media(tablet) {
     padding-bottom: 40px;
@@ -22,9 +25,18 @@
       text-align: left;
       padding: 0;
     }
+
+    &__post {
+      margin-bottom: 90px;
+    }
   }
 
   @include media(dt) {
+
+    &__post {
+      margin-bottom: 100px;
+    }
+
     &__decor-side {
       $s-decor-line-width: 70px;
       $s-decor-line-height: 1px;
