--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -14,6 +14,7 @@
   &__main {
     max-width: 1920px;
     margin: 0 auto;
+    overflow: hidden;
   }
 
   &__actual {
@@ -22,5 +23,13 @@
 
   &__promo {
     position: relative;
+    margin-bottom: 197px;
+    @include media(600px) {
+      margin-bottom: 210px;
+    }
+
+    @include media(dt) {
+      margin-bottom: 300px;
+    }
   }
 }
