2 bugs were fixed

--- a/src/styles/footer/footer.scss
+++ b/src/styles/footer/footer.scss
@@ -89,11 +89,11 @@
     flex-direction: column;
     flex-wrap: wrap;
 
-    height: 36.25vw + 3.12vw * 4;
+    height: 36.25vw + 3.12vw * 5;
   }
 
   &__nav-item {
-    padding: 3.12vw 0;
+    padding: 2.7vw 0;
   }
 
   &__nav-link {
@@ -101,11 +101,19 @@
     font-size: 4.37vw;
     font-style: normal;
     font-weight: 400;
-    line-height: 4.37vw;
+    line-height: 100%;
     text-align: left;
     color: #0f0e08;
 
-    padding: 3.12vw 5vw 3.12vw 0;
+    padding: 2.7vw 5vw 2.7vw 0;
+  }
+}
+
+@media screen and (min-width: 360px) {
+  .footer {
+    &__nav-list {
+      height: 36.25vw + 3.12vw * 4;
+    }
   }
 }
 
