--- a/src/styles/galery/galery.scss
+++ b/src/styles/galery/galery.scss
@@ -61,9 +61,9 @@
     width: 9px;
     height: 9px;
     border-radius: 50%;
-    color: #000;
+    background: #e0e0e0;
     &--active {
-      color: #1a5a4c;
+      background: #1a5a4c;
     }
 
   }
@@ -138,9 +138,9 @@
       width: 9px;
       height: 9px;
       border-radius: 50%;
-      color: #000;
+      background: #e0e0e0;
       &--active {
-        color: #1a5a4c;
+        background: #1a5a4c;
       }
 
     }
@@ -376,9 +376,9 @@
       width: 9px;
       height: 9px;
       border-radius: 50%;
-      color: #000;
+      background: #000;
       &--active {
-        color: #1a5a4c;
+        background: #1a5a4c;
       }
 
     }
