mobile header was fixed

--- a/src/styles/header/form.scss
+++ b/src/styles/header/form.scss
@@ -1,6 +1,7 @@
 .search-form {
   display: flex;
   justify-content: center;
+  align-self: center;
   &__input {
     max-width: 230px;
     height: 50px;
