--- a/src/styles/header/header.scss
+++ b/src/styles/header/header.scss
@@ -1,16 +1,16 @@
 .header {
   overflow: hidden;
   display: grid;
-  grid-template-rows: 63vh 23vh 14vh;
+  grid-template-rows: 93.75vw ;
   justify-items: center;
   margin: 0 auto;
-  height: 100vh;
+  min-height: 100vh;
   background: #fff;
   background-image: url(/images/header/muz.png);
   background-size: 100vw auto;
   background-repeat: no-repeat;
   position: relative;
-  padding-bottom: 70px;
+  padding-bottom: 0;
 
   &__switch {
     position: absolute;
@@ -242,6 +242,9 @@
   &__page-name {
     grid-row: 2/3;
 
+    align-self: center;
+    height: 29vw;
+
     font-family: Montserrat, sans-serif;
     font-size: 45px;
     font-style: normal;
@@ -258,15 +261,15 @@
 
 @media screen and (min-width:768px) {
   .header {
-    padding-left: 34px;
+    padding: 0 5.5vw;
     display: grid;
     grid-template-columns: 266px;
     grid-template-rows: 114px + 135px 135px;
     justify-items: center;
     align-items: end;
+    min-height: 0;
 
     margin: 0 auto;
-    //max-width: $tablet-width;
     height: 300px + 183px;
     background: #fff;
     background-image: url(/images/header/muz.png);
@@ -293,6 +296,9 @@
     &__page-name {
       grid-row: 1/2;
       padding-left: 34px;
+
+      align-self: auto;
+      height: auto;
 
       font-family: Montserrat, sans-serif;
       font-size: 55px;
