fixed by recommendation

--- a/src/styles/burger.scss
+++ b/src/styles/burger.scss
@@ -1,16 +1,12 @@
 .burger {
-
   margin-left: 40px;
   z-index: 4;
 
-  @media screen and (max-width: 1280px) {
-    transform: scale(0.8);
-  }
-
   @media screen and (max-width: 768px) {
     margin-left: 10px;
-    transform: scale(0.6);
   }
+
+  cursor: pointer;
 
   &__menu {
     position: relative;
@@ -43,6 +39,14 @@
 
     &-line3 {
       transform-origin: bottom right;
+    }
+
+    @media screen and (max-width: 1280px) {
+      transform: scale(0.8);
+    }
+
+    @media screen and (max-width: 768px) {
+      transform: scale(0.6);
     }
   }
 }
