--- a/src/styles/cutaway.scss
+++ b/src/styles/cutaway.scss
@@ -1,12 +1,16 @@
 .cutaway {
   width: 100%;
   height: 565px;
+  display: grid;
+  grid-template-columns: 4fr 8fr;
+  grid-template-rows: 300px 100px;
 
   @media screen and (max-width: 1280px) {
     height: 384px;
   }
 
   @media screen and (max-width: 768px) {
+    grid-template-rows: 400px 100px;
     height: 300px;
     z-index: -1;
   }
@@ -34,7 +38,6 @@
       z-index: -1;
       height: 300px;
       width: 100%;
-      // background-position: center center;
     }
 
     &-name {
@@ -78,25 +81,30 @@
   &__ticket {
     display: flex;
     position: relative;
-    top: 420px;
-    left: -280px;
+    align-self: end;
+    justify-self: flex-end;
+    grid-row: 2;
     width: 230px;
     height: 70px;
     box-sizing: border-box;
-    // transition: background-color 0.5s, color 0.5s;
+    transition: background-color 0.5s, color 0.5s;
     cursor: pointer;
 
     @media screen and (max-width: 1280px) {
-      left: -235px;
+      align-self: flex-start;
     }
 
     @media screen and (max-width: 768px) {
-      position: static;
-      margin: -30px auto 0;
+      grid-row: 2;
+      grid-column: 1/span 2;
+      justify-self: center;
       width: 300px;
     }
 
     &-text {
+      width: 150px;
+      height: 70px;
+
       font-family: $IBM;
       font-weight: 500;
       font-size: 16px;
@@ -105,27 +113,27 @@
       color: $darkGrey;
       text-decoration: none;
       border: 1px solid $darkGreen;
-      width: 150px;
-      height: 70px;
+
       transition: background-color 0.5s, color 0.5s;
+      cursor: pointer;
+
+      &:hover {
+        background-color: $darkGreen;
+        color: $classicWhite;
+      }
 
       @media screen and (max-width: 768px) {
         width: 230px;
       }
-
     }
 
     &-button {
-      // display: inline-block;
+      display: block;
       width: 70px;
       height: 70px;
       background: url(../images/Vector.svg) no-repeat center;
       background-color: $darkGreen;
-    }
-
-    &:hover &-text {
-      background-color: $darkGreen;
-      color: $classicWhite;
+      cursor: pointer;
     }
   }
 
