--- a/src/styles/header/header.scss
+++ b/src/styles/header/header.scss
@@ -261,7 +261,8 @@
 
 @media screen and (min-width:768px) {
   .header {
-    padding: 0 5.5vw;
+    padding: 0;
+    padding-left: 5.5vw;
     display: grid;
     grid-template-columns: 266px;
     grid-template-rows: 114px + 135px 135px;
@@ -270,6 +271,7 @@
     min-height: 0;
 
     margin: 0 auto;
+    margin-right: 5.5vw;
     height: 300px + 183px;
     background: #fff;
     background-image: url(/images/header/muz.png);
@@ -332,8 +334,8 @@
     justify-items: start;
     align-items: end;
 
-    margin: 0 auto;
-    //max-width: $laptop-width;
+    margin: 0 auto 0 0;
+    max-width: $laptop-width * 1.3;
     height: 725px + 100px;
     background: #fff;
     background-image: url(/images/header/muz.png);
