burger menu was implemented and some small inprovments were done

--- a/src/styles/current-events.scss
+++ b/src/styles/current-events.scss
@@ -301,6 +301,7 @@
       height: 204px;
       padding: 45px 100px 50px;
       background-color: #fff;
+      box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
 
       @include mobileScreen {
         width: 278px;
