--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -87,12 +87,30 @@
       &-info {
         &-phone {
           display: block;
+
+          transition: opacity 0.5s ease-in;
+
+          &:hover {
+            opacity: 0.8;
+          }
         }
         &-mail {
           display: block;
+
+          transition: opacity 0.5s ease-in;
+
+          &:hover {
+            opacity: 0.8;
+          }
         }
         &-address {
           display: block;
+
+          transition: opacity 0.5s ease-in;
+
+          &:hover {
+            opacity: 0.8;
+          }
         }
         
       }
@@ -125,6 +143,31 @@
       }
       @include mobileScreen {
         width: 280px;
+      }
+
+      &-list1 {
+
+        &-item {
+
+          transition: opacity 0.5s ease-in;
+
+          &:hover {
+            opacity: 0.8;
+          }
+        }
+      }
+
+      &-list2 {
+
+        &-item {
+
+          transition: opacity 0.5s ease-in;
+
+          &:hover {
+            opacity: 0.8;
+          }
+        }
+
       }
     }
   }
