--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -102,6 +102,13 @@
     background-color: rgba(255, 255, 255, 0.7);
     border-radius: 50%;
 
+    cursor: pointer;
+
+    &:hover {
+
+      opacity: 1;
+    }
+
     @include tabletScreen {
       display: flex;
     }
@@ -137,6 +144,12 @@
       height: 9px;
       border-radius: 50%;
       background-color: #e0e0e0;
+
+      cursor: pointer;
+
+      &:hover {
+        color: #31d8b4;
+      }
 
       &--active {
         background-color: #1a5a4c;
