--- a/src/styles/link-button.scss
+++ b/src/styles/link-button.scss
@@ -4,6 +4,14 @@
   height: 70px;
   background-color: #1a5a4c;
 
+  cursor: pointer;
+
+  transition: background-color 0.5s ease-in;
+
+  &:hover {
+    background-color: #847b74;
+  }
+
   &__arrow {
     margin: auto;
   }
