Footer done for mobile

--- a/src/styles/container.scss
+++ b/src/styles/container.scss
@@ -1,4 +1,5 @@
 .container {
+
   padding: $desctop-padding;
   margin: 0 auto;
 
@@ -8,5 +9,11 @@
     padding: $tablet-padding;
 
     max-width: $min-tablet-width;
+  }
+
+  @media (max-width: $min-tablet-width) {
+    padding: $mobile-padding;
+
+    min-width: $min-mobile-width;
   }
 }
