--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -1,7 +1,11 @@
 .content {
+
   &__events {
+    margin-top: 200px;
     margin-bottom: 100px;
+
     @media (max-width: $min-desctop-width) {
+      margin-top: 90px;
       margin-bottom: 90px;
     }
   }
@@ -16,6 +20,7 @@
 
   &__gallery {
     margin-bottom: 200px;
+    
     @media (max-width: $min-desctop-width) {
       margin-bottom: 130px;
     }
