--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -42,6 +42,11 @@
       grid-template-rows: 543px;
       gap: 20px;
     }
+
+    @media (max-width: $min-tablet-width) {
+      grid-template-columns: 280px;
+      grid-template-rows: 410px;
+    }
   }
 
   &__item {
