--- a/src/styles/lecture.scss
+++ b/src/styles/lecture.scss
@@ -20,11 +20,18 @@
 
     background-color: #fff;
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
+
+    @media (max-width: $min-tablet-width) {
+      padding: 25px 20px 34px;
+      width: 278px;
+      height: 154px;
+    }
   }
 
   &__details {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 
     margin-bottom: 23px;
   }
