--- a/src/styles/subscribe.scss
+++ b/src/styles/subscribe.scss
@@ -34,8 +34,10 @@
 
     margin-right: 30px;
     padding-left: 35px;
+
     width: 470px;
     height: 70px;
+
     border: none;
 
     &:focus {
@@ -44,6 +46,11 @@
 
     @media (max-width: $min-desctop-width) {
       width: 395px;
+    }
+
+    @media (max-width: $min-tablet-width) {
+      width: 233px;
+      margin-right: 0;
     }
 
   }
