--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -16,8 +16,10 @@ $color-orange: #f14a27;
 
 $img-logo: "/images/logo.svg";
 $img-header: "/images/intro-large.jpg";
+
 $img-events-1: "/images/events-1.jpg";
 $img-events-2: "/images/events-2.jpg";
+
 $img-lecture: "/images/lecture.jpg";
 
 $img-gallery-1: "/images/gallery-1.jpg";
@@ -33,6 +35,7 @@ $img-fb: "/images/fb.svg";
 $img-ig: "/images/ig.svg";
 
 $img-arrow: "/images/arrow.svg";
+$img-arrow-white: "/images/arrow-white.svg";
 
 $min-desctop-width: 1280px;
 $desctop-padding: 0 58px;
@@ -41,18 +44,18 @@ $min-tablet-width: 768px;
 $tablet-padding: 0 34px;
 
 $min-mobile-width: 320px;
-$mobile-padding: 20px;
+$mobile-padding: 0 20px;
 
 @keyframes bounce {
   0%,
   50%,
   100% {
-    transform: translateY(0);
+    transform: translateX(0);
   }
   20% {
-    transform: translateY(-30px);
+    transform: translateX(30px);
   }
   70% {
-    transform: translateY(-15px);
+    transform: translateX(15px);
   }
 }
