--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -14,10 +14,23 @@
 
       width: 100%;
     }
+
+    @media (max-width: $min-tablet-width) {
+      width: 100%;
+
+      margin-bottom: 19px;
+    }
   }
 
   &__info {
-    max-width: 370px;
+    @media (min-width: $min-desctop-width) {
+      max-width: 370px;
+
+    }
+
+    @media (max-width: $min-desctop-width) {
+      width: 100%;
+    }
   }
 
   &__details {
@@ -26,16 +39,29 @@
 
     margin-bottom: 32px;
 
+    @media (max-width: $min-tablet-width) {
+      justify-content: space-between;
+      margin-bottom: 10px;
+    }
+
   }
 
   &__type {
     margin-right: 26px;
+
+    @media (max-width: $min-tablet-width) {
+      margin-right: 0;
+    }
   }
 
   &__title {
     display: inline-block;
     position: relative;
     margin-bottom: 15px;
+
+    @media (max-width: $min-tablet-width) {
+      margin-bottom: 10px;
+    }
 
     &::after {
       content: "";
@@ -47,6 +73,21 @@
       height: 15px;
 
       background-color: $color-orange;
+
+      @media (max-width: $min-tablet-width) {
+        top: 9px;
+        right: -30px;
+      }
     }
+  }
+}
+
+@for $i from 1 through 2 {
+  .event--#{$i} .event__img {
+    background-image: url("/images/events-#{$i}.jpg");
+
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
   }
 }
