--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -17,6 +17,10 @@ h1 { /*ХУДОЖНІЙ МУЗЕЙ*/
   @media (max-width: $min-desctop-width) {
     font-size: 55px;
   }
+
+  @media (max-width: $min-tablet-width) {
+    font-size: 45px;
+  }
 }
 
 h2 { /*Актуальні події*/
@@ -25,6 +29,11 @@ h2 { /*Актуальні події*/
   font-size: 48px;
   line-height: 100%;
   color: $color-black-text;
+
+  @media (max-width: $min-tablet-width) {
+    font-size: 36px;
+    text-align: center;
+  }
 }
 
 h3 { /*Йду і повертаюсь*/
@@ -34,14 +43,22 @@ h3 { /*Йду і повертаюсь*/
   line-height: 100%;
   color: $color-black-text;
 
+  @media (max-width: $min-tablet-width) {
+    font-size: 28px;
+  }
+
 }
 
 h4 { /*date*/
   font-family: "IBM Plex Sans", sans-serif;
   font-weight: 700;
   font-size: 14px;
-  line-height: 21px;
+  line-height: 150%;
   color: $color-green;
+
+  @media (max-width: $min-tablet-width) {
+    font-size: 16px;
+  }
 }
 
 h5 { /*exhibition*/
@@ -51,6 +68,10 @@ h5 { /*exhibition*/
   line-height: 100%;
   color: $color-grey-subtitle;
   text-transform: uppercase;
+
+  @media (max-width: $min-tablet-width) {
+    font-size: 16px;
+  }
 }
 
 h6 { /*Бути в курсі всіх актуальних подій та останніх новин.*/
@@ -59,6 +80,11 @@ h6 { /*Бути в курсі всіх актуальних подій та ос
   font-size: 18px;
   line-height: 100%;
   color: #fff;
+
+  @media (max-width: $min-tablet-width) {
+    line-height: 150%;
+  }
+
 }
 
 p {
