add lection block

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,7 +3,9 @@
 @import "typography";
 @import "reset";
 @import "title";
+@import "events";
 @import "exhibition";
+@import "lection";
 
 body {
   font-family: "IBM Plex Sans", sans-serif;
