--- a/src/styles/container.scss
+++ b/src/styles/container.scss
@@ -3,9 +3,9 @@
   padding: $desctop-padding;
   margin: 0 auto;
 
-  max-width: $min-desctop-width;
+  max-width: $min-desktop-width;
 
-  @media (max-width: $min-desctop-width) {
+  @media (max-width: $min-desktop-width) {
     padding: $tablet-padding;
 
     max-width: $min-tablet-width;
