--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -4,7 +4,7 @@
     margin-top: 200px;
     margin-bottom: 100px;
 
-    @media (max-width: $min-desctop-width) {
+    @media (max-width: $min-desktop-width) {
       margin-top: 90px;
       margin-bottom: 90px;
     }
@@ -13,15 +13,15 @@
   &__lecture {
     margin-bottom: 200px;
 
-    @media (max-width: $min-desctop-width) {
+    @media (max-width: $min-desktop-width) {
       margin-bottom: 90px;
     }
   }
 
   &__gallery {
     margin-bottom: 200px;
-    
-    @media (max-width: $min-desctop-width) {
+
+    @media (max-width: $min-desktop-width) {
       margin-bottom: 130px;
     }
   }
