--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -9,7 +9,7 @@
     width: 670px;
     height: 520px;
 
-    @media (max-width: $min-desctop-width) {
+    @media (max-width: $min-desktop-width) {
       margin-bottom: 30px;
 
       width: 100%;
@@ -23,12 +23,12 @@
   }
 
   &__info {
-    @media (min-width: $min-desctop-width) {
+    @media (min-width: $min-desktop-width) {
       max-width: 370px;
 
     }
 
-    @media (max-width: $min-desctop-width) {
+    @media (max-width: $min-desktop-width) {
       width: 100%;
     }
   }
