--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -10,13 +10,13 @@
     &:nth-child(even) {
       flex-flow: row-reverse;
 
-      @media (max-width: $min-desctop-width) {
+      @media (max-width: $min-desktop-width) {
         flex-direction: column;
         align-items: flex-start;
       }
     }
 
-    @media (max-width: $min-desctop-width) {
+    @media (max-width: $min-desktop-width) {
       flex-direction: column;
       align-items: flex-start;
 
