--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -7,10 +7,10 @@
     display: grid;
     grid-template-columns: 1fr 2fr 2fr;
 
-    @media (max-width: $min-desctop-width) {
+    @media (max-width: $min-desktop-width) {
       grid-template-columns: 1fr 6fr;
       grid-template-rows: 2fr 1fr;
-      gap: 45px;
+      gap: 0 45px;
     }
 
     @media (max-width: $min-tablet-width) {
@@ -83,12 +83,6 @@
     margin-bottom: 20px;
   }
 
-  &__schedule-detailed-description {
-    @media (max-width: $min-desctop-width) {
-      // margin-bottom: 46px;
-    }
-  }
-
   &__contacts {
     width: 50%;
   }
@@ -103,7 +97,7 @@
   &__nav {
     border-left: 1px solid rgba(26, 90, 76, 0.5);
 
-    @media (max-width: $min-desctop-width) {
+    @media (max-width: $min-desktop-width) {
       grid-column-start: 2;
       padding-top: 50px;
 
