--- a/src/styles/gallery-item.scss
+++ b/src/styles/gallery-item.scss
@@ -29,7 +29,7 @@
     text-align: center;
   }
 
-  @media (min-width: $min-desctop-width) {
+  @media (min-width: $min-desktop-width) {
     &:hover &__info {
       display: block;
     }
