--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -3,7 +3,7 @@
 
   // height: 655px;
 
-  @media (max-width: $min-desctop-width) {
+  @media (max-width: $min-desktop-width) {
     margin-bottom: 90px;
 
     // height: 384px;
@@ -79,7 +79,7 @@
 
     margin-left: 187px;
 
-    @media (max-width: $min-desctop-width) {
+    @media (max-width: $min-desktop-width) {
       margin-left: 0;
     }
 
@@ -99,7 +99,7 @@
     background-position: center;
     background-repeat: no-repeat;
 
-    @media (max-width: $min-desctop-width) {
+    @media (max-width: $min-desktop-width) {
       left: 262px;
 
       height: 384px;
@@ -115,7 +115,7 @@
     margin-top: 148px;
     margin-bottom: 80px;
 
-    @media (max-width: $min-desctop-width) {
+    @media (max-width: $min-desktop-width) {
       margin-bottom: 40px;
       margin-top: 78px;
     }
@@ -198,7 +198,7 @@
     bottom: -50px;
     transform: rotate(-90deg);
 
-    @media (max-width: $min-desctop-width) {
+    @media (max-width: $min-desktop-width) {
       display: none;
     }
   }
