--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -14,7 +14,7 @@ h1 { /*ХУДОЖНІЙ МУЗЕЙ*/
   line-height: 100%;
   color: #000;
 
-  @media (max-width: $min-desctop-width) {
+  @media (max-width: $min-desktop-width) {
     font-size: 55px;
   }
 
