--- a/src/styles/side-link.scss
+++ b/src/styles/side-link.scss
@@ -37,7 +37,7 @@
     font-size: 14px;
   }
 
-  @media (max-width: $min-desctop-width) {
+  @media (max-width: $min-desktop-width) {
     display: none;
   }
 }
