--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -37,7 +37,7 @@ $img-ig: "/images/ig.svg";
 $img-arrow: "/images/arrow.svg";
 $img-arrow-white: "/images/arrow-white.svg";
 
-$min-desctop-width: 1280px;
+$min-desktop-width: 1280px;
 $desctop-padding: 0 58px;
 
 $min-tablet-width: 768px;
