--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -37,7 +37,7 @@
       grid-template-columns: repeat(4, 370px);
     }
 
-    @media (max-width: $min-desctop-width) {
+    @media (max-width: $min-desktop-width) {
       grid-template-columns: repeat(2, 340px);
       grid-template-rows: 543px;
       gap: 20px;
@@ -64,7 +64,7 @@
       grid-column-start: 2;
       grid-column-end: 4;
 
-      @media (max-width: $min-desctop-width) {
+      @media (max-width: $min-desktop-width) {
         display: none;
       }
     }
@@ -73,12 +73,12 @@
       grid-column-start: 1;
       grid-column-end: 3;
 
-      @media (max-width: $min-desctop-width) {
+      @media (max-width: $min-desktop-width) {
         display: none;
       }
     }
 
-    @media (max-width: $min-desctop-width) {
+    @media (max-width: $min-desktop-width) {
       display: none;
 
       &--high {
