--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,8 +5,11 @@
 @import "header";
 @import "nav";
 @import "section";
+@import "event";
 @import "gallery";
 @import "fon";
+@import "subscription";
+@import "footer";
 
 body {
   background: $c-gray;
