--- a/src/styles/section.scss
+++ b/src/styles/section.scss
@@ -17,9 +17,9 @@
   }
 }
 
-@media screen and (max-width: 1250px) {
+@media screen and (max-width: 1300px) {
   .section {
-    text-align: start;
+    text-align: center;
     margin-bottom: 100px;
   }
 }
