--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -24,6 +24,12 @@ ul {
   box-sizing: border-box;
 }
 
+input,
+button {
+  outline: none;
+  border: none;
+}
+
 //select {
 //  // A reset of styles, including removing the default dropdown arrow
 //  appearance: none;
