--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -58,9 +58,6 @@
     text-transform: uppercase;
   }
 
-  &__visit {
-    display: none;
-  }
 
   &__content {
     position: relative;
@@ -118,6 +115,22 @@
     position: absolute;
     bottom: 50%;
     left: 115%;
+  }
+
+}
+
+.about {
+  display: flex;
+  margin-bottom: 80px;
+
+  &__item {
+    min-width: $column * 2;
+    @include smallText($colorLightGray);
+  }
+
+  &__title {
+    opacity: 0.7;
+
   }
 
 }
